<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fire-Alert Scanner</string>
    <string name="action_settings">Settings</string>
    <string name="str_data">Read data :</string>
    <string name="str_wait_data">Scan Barcode&#8230;</string>
    <string name="scan_button">Scan</string>
    <string name="record_button">Record Results</string>
    <string name="title_activity_main_data_entry">Data Input</string>
    <string name="clients_textview">Clients:</string>
    <string name="service_address_textview">Service Address: </string>
    <string name="rooms_textview">Rooms:</string>
    <string name="equiptment_textview">Equiptment:</string>
    <string name="franchisee_textview">Franchisee: </string>
    <string name="client_contract_textview">Client Contract: </string>
    <string name="floor_textview">Floor: </string>
    <string name="element_textview">Element: </string>
    <string name="enter_button">Enter</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="title_activity_client_view">Send Results</string>
    <string name="hello_world">Hello world!</string>
    <string name="manual_button">Manual</string>
    <string name="save_button">Save</string>
    <string name="room_label">Room</string>
    
    <!-- TCP Strings -->
    
    <string name="hello">Hello!</string>
    <!-- <string name="app_name">Sample TCP Sender</string> -->
    <string name="port_hint">Port</string>
    <string name="ip_hint">IP Address</string>
    <string name="port_label">Server Port #</string>
    <string name="ip_label">Server IP Address</string>
    <string name="lable3">Enter XML message here:</string>
    <string name="port">3000</string>
    <string name="ip">192.168.0.17</string>
    <string name="BtnConnect">Connect</string>
    <string name="BtnSend">Send</string>
    <string name="BtnClose">Disconnect</string>
    
    <string-array name="goodPoor_arrays">
        <item>Good</item>
        <item>Poor</item>
        <item>N/A</item>
    </string-array>
<<<<<<< HEAD

=======
>>>>>>> 029f5f1db83cfe7312b973d642248e61ea31deb5

</resources>