<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp" >

    <TextView
        android:id="@+id/portLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/port_label"
        android:textColor="@android:color/primary_text_dark" />
    <EditText
        android:id="@+id/portInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/port_hint"
        android:inputType="number"
        android:text="@string/port" />
    <TextView
        android:id="@+id/ipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip_label"
        android:textColor="@android:color/primary_text_dark" />
    <EditText
        android:id="@+id/ipInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ip_hint"
        android:inputType="text"
        android:text="@string/ip" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/tcpCancelButton"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel" />
        <Button
            android:id="@+id/tcpOkButton"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:text="@android:string/ok" />
        
    </LinearLayout>

</LinearLayout>
