<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#7F7F7F"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="@string/lable1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:text="@string/lable2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:ems="10"
            android:inputType="number"
            android:text="@string/port" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:ems="10"
            android:inputType="number|text"
            android:text="@string/ip" >

            <requestFocus />
        </EditText>

    </LinearLayout>



    <Button
        android:id="@+id/button1"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/BtnConnect" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/lable3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:ems="10"
            android:inputType="textPostalAddress" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/BtnSend" />

    <Button
        android:id="@+id/button3"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/BtnClose" />

</LinearLayout>